<resources>
    <string name="app_name">Quick Calendar Widget</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>
    <string name="temp_day">MONDAY</string>
    <string name="temp_date">11</string>
    <string name="temp_event">Birthday</string>
    <string name="seek_bar_title">Transparency (%)</string>
    <string name="advice_backgroundColor">Background Color</string>
    <string name="advice_dayColor">Day Color</string>
    <string name="advice_dateColor">Date Color</string>
    <string name="advice_eventColor">Event Color</string>
    <string name="advice_todayColor">Today Highlight Color</string>
    <string name="advice_submit">SAVE</string>
    <string name="advice_seekDefault">0</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="advice_preview">preview</string>
</resources>
