<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout style="@style/linearLayout">

        <TextView
            android:id="@+id/textDay1"
            style="@style/textView"
            android:text="@string/day_sunday" />

        <TextView
            android:id="@+id/textDate1"
            style="@style/textView"
            android:text="@string/day_sunday" />

        <TextView
            android:id="@+id/textEvent1"
            style="@style/textViewEvent"
            android:text="@string/day_sunday" />

    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay2"
            style="@style/textView"
            android:text="@string/day_monday" />

        <TextView
            android:id="@+id/textDate2"
            style="@style/textView"
            android:text="@string/day_monday" />

        <TextView
            android:id="@+id/textEvent2"
            style="@style/textViewEvent"
            android:text="@string/day_monday" />

    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay3"
            style="@style/textView"
            android:text="@string/day_tuesday" />

        <TextView
            android:id="@+id/textDate3"
            style="@style/textView"
            android:text="@string/day_tuesday" />

        <TextView
            android:id="@+id/textEvent3"
            style="@style/textViewEvent"
            android:text="@string/day_tuesday" />
    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay4"
            style="@style/textView"
            android:text="@string/day_wednesday" />

        <TextView
            android:id="@+id/textDate4"
            style="@style/textView"
            android:text="@string/day_wednesday" />

        <TextView
            android:id="@+id/textEvent4"
            style="@style/textViewEvent"
            android:text="@string/day_wednesday" />

    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay5"
            style="@style/textView"
            android:text="@string/day_thursday" />

        <TextView
            android:id="@+id/textDate5"
            style="@style/textView"
            android:text="@string/day_thursday" />

        <TextView
            android:id="@+id/textEvent5"
            style="@style/textViewEvent"
            android:text="@string/day_thursday" />

    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay6"
            style="@style/textView"
            android:text="@string/day_friday" />

        <TextView
            android:id="@+id/textDate6"
            style="@style/textView"
            android:text="@string/day_friday" />

        <TextView
            android:id="@+id/textEvent6"
            style="@style/textViewEvent"
            android:text="@string/day_friday" />

    </LinearLayout>


    <LinearLayout style="@style/linearLayout" >

        <TextView
            android:id="@+id/textDay7"
            style="@style/textView"
            android:text="@string/day_saturday" />

        <TextView
            android:id="@+id/textDate7"
            style="@style/textView"
            android:text="@string/day_saturday" />

        <TextView
            android:id="@+id/textEvent7"
            style="@style/textViewEvent"
            android:text="@string/day_saturday" />

    </LinearLayout>


</LinearLayout>